# PonyExl3

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: test.yml
docs/: conversion_tool.md  drifts_investigation.md
docs/kld-results/: Qwen3.6-27B-exl3-4.15bpw.txt  Qwen3.6-27B-exl3-8.00bpw.txt  Qwen3.6-35B-A3B-exl3-4.00bpw.txt
ponyexl3/: __init__.py  testing.py  types.py
ponyexl3/cli/: _generate_common.py  compare_engines.py  compare_layer.py  convert.py  convert_advanced.py  convert_e2e.py  generate_bench.py  generate_model.py  generate_synthetic_layer.py  gptq_convert.py  optimize_measurements.py
ponyexl3/convert/: DESIGN.md  __init__.py  allocation.py  calibration.py  cancel.py  capture.py  direct.py  discovery.py  driver.py  fixtures.py  hessian.py  measure.py  metal_search.py  mlx_trellis.py  reference_search.py  regularize.py  reuse.py  timing.py
ponyexl3/convert/calibration_data/: NOTICE  wikitext2.txt
ponyexl3/mlx/: __init__.py  _parity.py  cache.py  codebook.py  decode.py  deltanet_patch.py  dflash.py  dispatch.py  eagle3.py  exl3_fused.py  exl3_linear.py  exl3_mlp_monolith.py  exl3_moe.py  exl3_qmm.py  exl3_qmv.py  forward.py  gemv_metal.py  generate.py  gptq.py  hadamard.py  layer_state.py  linear.py  metal_codebook_poc.py  metal_kernels.py  model.py  mtp.py  native.py  ops.py  perm.py  prefill.py  reconstruct.py  signs.py  spec_sampling.py  stripe.py  weights.py
ponyexl3/ref/: __init__.py  codebook.py  decode.py  forward.py  hadamard.py  layer.py  loader.py  perm.py  reconstruct.py  signs.py  synthetic.py  trellis.py
ponyexl3/reference/: README.md  __init__.py  _cuda_common.py  compare_reference.py  compare_trace.py  export_linear_io.py  export_moe_routing.py  export_reference.py  export_reference_mlx.py  export_trace.py  list_modules.py  run_cuda_exports.ps1  run_cuda_exports.sh  verify_reference.py
tests/: conftest.py  test_cli.py  test_codebook.py  test_convert.py  test_convert_allocation.py  test_convert_calibration.py  test_convert_discovery.py  test_convert_driver.py  test_convert_hessian.py  test_convert_measure.py  test_convert_metal.py  test_convert_regularize.py  test_decode_reconstruct.py  test_exl3_fused.py  test_exl3_linear_module.py  test_gemma4_model.py  test_generate_bench.py  test_generate_validation.py  test_minicpm5_model.py  test_mlp_monolith.py  test_mlx_codebook.py  test_mlx_decode.py  test_mlx_forward.py  test_mlx_gemv.py  test_mlx_hadamard.py  test_mlx_linear.py  test_mlx_prefill.py  test_mlx_reconstruct.py  test_mlx_signs.py  test_mlx_stripe.py  test_mlx_trellis.py  test_moe_activation.py  test_native.py  test_reference_parity.py  test_spec_sampling.py  test_standalone.py  test_trellis.py
tools/: README.md  annotate_ast.py
tools/bench/: _bench_decode_worker.py  benchmark_all_decode.py  benchmark_forward.py  benchmark_mlp_monolith.py  deltanet_op_bench.py  gemm_mt8_bench.py  gemm_mt_bench.py  gemm_tbx_sweep.py  gemv_split_bench.py  make_fidelity_chart.py  make_perf_charts.py  make_vs_chart.py  mm_dense_bench.py  moe_mm_bench.py  moe_prefill_probe.py  perf_chart_bench.py
tools/dev/: alu_probe.py  dflash_ab.py  dflash_diag.py  drift_eval.py  gptq_pilot.py  kld_eval.py  lookup_ab.py  pyright_check.py  repair_parity.py  requant_domain_probe.py  spec_ab.py  spec_profile.py  verify_decompose.py
typings/datasets/: __init__.pyi
typings/exllamav3/: __init__.pyi  model.pyi
typings/exllamav3/modules/: block_sparse_mlp.pyi
typings/exllamav3/modules/quant/: exl3.pyi
typings/mlx/: nn.pyi  utils.pyi
typings/mlx/core/: __init__.pyi  fast.pyi
typings/mlx_lm/: utils.pyi
typings/safetensors/: __init__.pyi
typings/torch/: __init__.pyi
